sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Evaluation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The status of the training evaluation</description>
    <inlineHelpText>Please check if the evaluation form for the training event was completed</inlineHelpText>
    <label>Evaluation Completed?</label>
    <type>Checkbox</type>
</CustomField>