sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Total Max score obtained from the training session</description>
    <inlineHelpText>Total Max score obtained from the training session</inlineHelpText>
    <label>Max Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>