sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Training event related notes</description>
    <inlineHelpText>Please enter any training event related notes</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>