sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>IF(Total_Score__c * Max_Score__c = 0, 0,Total_Score__c / Max_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>