sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <description>Total score obtained from the training</description>
    <inlineHelpText>Total score obtained from the training</inlineHelpText>
    <label>Total Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>