sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Trainee__c.field-meta.xml
<CustomField>
    <fullName>Trainee__c</fullName>
    <description>The applicant that will attend this training</description>
    <inlineHelpText>Please enter the applicant that will attend this training</inlineHelpText>
    <label>Trainee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trainings</relationshipLabel>
    <relationshipName>Trainings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>