sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Training_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Date__c</fullName>
    <description>The scheduled or actual date of training event</description>
    <inlineHelpText>Please enter the scheduled or actual date of training event</inlineHelpText>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>