sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Training_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_End_Date__c</fullName>
    <description>Date that this person ends training</description>
    <inlineHelpText>When does this training end?</inlineHelpText>
    <label>Training End Date</label>
    <type>Date</type>
</CustomField>