sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Training_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Training_Start_Date__c</fullName>
    <description>Day that the person is scheduled to begin training</description>
    <inlineHelpText>When does this training begin?</inlineHelpText>
    <label>Training Start Date</label>
    <type>Date</type>
</CustomField>