sfSandBoxCode/force-app/main/default/objects/Trainings__c/fields/Training_Type__c.field-meta.xml
<CustomField>
    <fullName>Training_Type__c</fullName>
    <description>The type of training event</description>
    <inlineHelpText>Please select the type of training event</inlineHelpText>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New FLO Training - Session 1</fullName>
            </value>
            <value>
                <fullName>New FLO Training - Session 2</fullName>
            </value>
            <value>
                <fullName>FLO Forum</fullName>
            </value>
            <value>
                <fullName>Youth Training</fullName>
            </value>
            <value>
                <fullName>FLO Training</fullName>
            </value>
            <value>
                <fullName>Sales Training</fullName>
            </value>
            <value>
                <fullName>SOPs Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>