sfSandBoxCode/force-app/main/default/objects/Trainings__c/listViews/All_Trainings.listView-meta.xml
<ListView>
    <fullName>All_Trainings</fullName>
    <columns>Trainee__c</columns>
    <columns>Training_Date__c</columns>
    <columns>Training_Type__c</columns>
    <columns>Attendance_Status__c</columns>
    <columns>Evaluation_Completed__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Trainings</label>
</ListView>