sfSandBoxCode/force-app/main/default/objects/Trainings__c/listViews/Scheduled_Trainings.listView-meta.xml
<ListView>
    <fullName>Scheduled_Trainings</fullName>
    <columns>NAME</columns>
    <columns>Trainee__c</columns>
    <columns>Training_Date__c</columns>
    <columns>Training_Type__c</columns>
    <columns>Attendance_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Scheduled Trainings</label>
</ListView>